--- a/scss/core/_text-styles.scss
+++ b/scss/core/_text-styles.scss
@@ -21,53 +21,66 @@
 			padding: 3px;
 		}
 
-		th, td {
+		th,
+		td {
 			border: 1px solid var(--blades-grey);
 			padding: 0.4rem;
 		}
 
 		&.items-list {
 			&.effects-list {
-					thead, tbody {
-							th {
-									margin: 0 !important;
-							}
-							th:nth-of-type(1), td:nth-of-type(1) {
-									width: 40%;
-							}
-							th:nth-of-type(2), td:nth-of-type(2) {
-									width: 30%;
-									text-align: center;
-							}
-							th:nth-of-type(3), td:nth-of-type(3) {
-									width: 15%;
-									text-align: center;
-							}
-							th:nth-of-type(4), td:nth-of-type(4) {
-									width: 15%;
-									text-align: right;
-							}
-							td {
-									// height: 24px;
-									line-height: 24px;
-									margin: 0;
-									vertical-align: middle;
-							}
-							img {
-									height: 24px;
-									width: 24px;
-									vertical-align: middle;
-							}
-							h4 {
-									display: inline-block;
-									line-height: 24px;
-									margin: 0;
-									vertical-align: middle;
-							}
-					}
-			}
-	}
 
+				thead,
+				tbody {
+					th {
+						margin: 0 !important;
+					}
+
+					th:nth-of-type(1),
+					td:nth-of-type(1) {
+						width: 40%;
+					}
+
+					th:nth-of-type(2),
+					td:nth-of-type(2) {
+						width: 30%;
+						text-align: center;
+					}
+
+					th:nth-of-type(3),
+					td:nth-of-type(3) {
+						width: 15%;
+						text-align: center;
+					}
+
+					th:nth-of-type(4),
+					td:nth-of-type(4) {
+						width: 15%;
+						text-align: right;
+					}
+
+					td {
+						// height: 24px;
+						line-height: 24px;
+						margin: 0;
+						vertical-align: middle;
+					}
+
+					img {
+						height: 24px;
+						width: 24px;
+						vertical-align: middle;
+					}
+
+					h4 {
+						display: inline-block;
+						line-height: 24px;
+						margin: 0;
+						vertical-align: middle;
+					}
+				}
+			}
+		}
 	}
 
 	figure {
@@ -114,6 +127,9 @@
 	.stripe label {
 		background-color: var(--blades-white) !important;
 		color: var(--blades-black) !important;
+		height: toRem(24px);
+		line-height: toRem(24px);
+		line-height: toRem(24px);
 	}
 
 	.stripe-tooth-body label {
@@ -128,14 +144,18 @@
 	.label-stripe {
 		background-color: var(--blades-grey);
 	}
+
 	.label-stripe-gray {
-			margin: 0;
-			th, th > *:not(:hover) {
-					color: var(--blades-white-bright);
-					text-shadow: 1px 1px 0px var(--blades-black-dark);
-			}
+		margin: 0;
+
+		th,
+		th>*:not(:hover) {
+			color: var(--blades-white-bright);
+			text-shadow: 1px 1px 0px var(--blades-black-dark);
+		}
 	}
-// #endregion ▄▄▄▄▄ STRIPE LABELS ▄▄▄▄▄
+
+	// #endregion ▄▄▄▄▄ STRIPE LABELS ▄▄▄▄▄
 
 
 
