--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,5 +1,10 @@
 
 @font-face {
+	font-family: "Fjalla One";
+	src: url("../assets/fonts/FjallaOne.ttf") format("truetype");
+}
+
+@font-face {
 	font-family: "Historical FellType";
 	src: url("../assets/fonts/HistoricalFellType/HistoricalFellType.otf") format("opentype");
 	font-style: normal;
