--- a/scss/tinymce/_tinymce-content.scss
+++ b/scss/tinymce/_tinymce-content.scss
@@ -1,6 +1,6 @@
 & {
-	padding: var(--content-padding) !important;
-	// min-height: 150px;
+	min-height: 100px;
+	background-color: var(0,0,0,0.2);
 	height: auto;
 	max-height: 600px;
 }
