--- a/scss/tinymce/skin/_skin-overrides.scss
+++ b/scss/tinymce/skin/_skin-overrides.scss
@@ -5,7 +5,7 @@
 
 		.tox-dialog__body {
 			.tox-dialog__body-content {
-				.tox-textarea {
+				code { // .tox-textarea {
 					font-family: var(--font-mono);
 				}
 			}
